2009-11-19  Eric Seidel  <eric@webkit.org>

        No review, just adding a FIXME.

        Split out command parsing and help printing from BugzillaTool
        https://bugs.webkit.org/show_bug.cgi?id=31688

        * Scripts/bugzilla-tool: Add an extra comment about current design failures.

2009-11-19  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Split out command parsing and help printing from BugzillaTool
        https://bugs.webkit.org/show_bug.cgi?id=31688

        * Scripts/bugzilla-tool:
         - Add new MultiCommandTool class to contain option parsing and help printing logic.
         - Rename private methods to use _ pattern.
         - MultiCommandTool has two abstract methods should_show_command_help and should_execute_command.
         - 

2009-11-19  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Re-factor help printing to use modern python idioms
        https://bugs.webkit.org/show_bug.cgi?id=31685

        * Scripts/bugzilla-tool:

2009-11-19  Eric Seidel  <eric@webkit.org>

        Reviewed by Darin Adler.

        commit-queue empty queue logs twice
        https://bugs.webkit.org/show_bug.cgi?id=31679

        * Scripts/bugzilla-tool:

2009-11-19  Eric Seidel  <eric@webkit.org>

        Reviewed by Darin Adler.

        bugzilla-tool's reviewer/committer rejection message should be clearer
        https://bugs.webkit.org/show_bug.cgi?id=31126

        Add more explanatory prose to bugzilla-tool's flag permission rejection message.

        * Scripts/modules/bugzilla.py:

2009-11-19  Eric Z. Ayers  <zundel@google.com>

        Reviewed by Pavel Feldman.

        Forces a WM_PAINT event on calling layoutTestController.display()
        in order to enable the timeline-paint.html test on Windows.
        ::UpdateWindow() does not force an event becaue the window is 
        not visible.

        https://bugs.webkit.org/show_bug.cgi?id=31402

        * DumpRenderTree/win/DumpRenderTree.cpp: