@@ -1,5 +1,17 @@
 2009-11-19  Eric Seidel  <eric@webkit.org>
 
+        Reviewed by Adam Barth.
+
+        Move MultiCommandTool and Command into a separate file and add some basic unit tests
+        https://bugs.webkit.org/show_bug.cgi?id=31695
+
+        * Scripts/bugzilla-tool:
+        * Scripts/modules/multicommandtool.py: Added.
+        * Scripts/modules/multicommandtool_unittest.py: Added.
+        * Scripts/run-webkit-unittests:
+
+2009-11-19  Eric Seidel  <eric@webkit.org>
+
         No review, just adding a FIXME.
 
         Split out command parsing and help printing from BugzillaTool
